<resources>
    <string name="app_name">ajudAgro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">Logo</string>
    <string name="cadastrar_coleta_text_button">Cadastrar\ncoleta</string>
    <string name="editar_coleta_text_button">Editar\nColeta</string>
    <string name="analisar_coleta_text_button">Analisar\nColeta</string>
    <string name="gerar_relatorios_text_button">Gerar\nRelatórios</string>
    <string name="ajuda">AJUDA</string>
    <string name="sobre">SOBRE</string>
    <string name="nomeDaCol">Nome da coleta</string>
    <string name="exemploColeta">Ex: Coleta 1</string>
    <string name="coordenadas">Coordenadas GPS</string>
    <string name="coordenadasHint">Ex: -14.604847  -49.207169</string>
    <string name="dimensoesArea">Dimensões da área (m²)</string>
    <string name="areaHint">Ex: 50</string>
    <string name="maquinarioHint">Ex: CASE IH 2388</string>
    <string name="maquinario">Maquinário</string>
    <string name="dataAnalise">Data de análise</string>
    <string name="dataAnaliseHint">Ex: 28/09/2023</string>
    <string name="cidade">Cidade</string>
    <string name="cidadeHint">Ex: Bento Gonçalves</string>
    <string name="estado">Estado</string>
    <string name="estadoHint">Ex: RS</string>
    <string name="textButtonAvancar">Avançar</string>
    <string name="diametroPeneira">Diâmetro da peneira (cm)</string>
    <string name="exemplosMedidasPeneiras">0.00</string>
    <string name="areaPeneira">Área da uma peneira (m²)</string>
    <string name="sessaoPerdasDeGraos">Perdas de Grãos em <b>Cima</b> da Peneira (gramas)</string>
    <string name="peneira1">Peneira 1</string>
    <string name="peneira2">Peneira 2</string>
    <string name="peneira3">Peneira 3</string>
    <string name="peneira4">Peneira 4</string>
    <string name="sessaoPerdasDeGraosEmbaixo">Perda de grãos <b>Embaixo</b> da Peneira (gramas)</string>
    <string name="salvarNoDB">Salvar</string>
    <string name="areaTodasPeneiras">Área das quatro peneiras (m²)</string>
    <string name="atualizarNoDB">Atualizar</string>
    <string name="deletar_analise_context">Deletar análise</string>
    <string name="empty_list_text">Nenhuma análise encontrada</string>
    <string name="textButtonTerminar">Pronto</string>
    <string name="perdas_totais_kg_ha">Perdas Totais(kg/ha)</string>
    <string name="perdas_no_sistema_industrial_kg_ha">Perdas no sistema\nIndustrial (kg/ha)</string>
    <string name="perdas_na_plataforma_kg_ha">Perdas na\nplataforma\n(kg/ha)</string>
    <string name="perdas_totais_sacas_ha">Perdas Totais(sacas/ha)</string>
    <string name="perdas_no_sistema_industrial_sacas_ha">Perdas no sistema\nIndustrial (sacas/ha)</string>
    <string name="perdas_na_plataforma_sacas_ha">Perdas na\nplataforma\n(sacas/ha)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latLonHint">-14.604847</string>
    <string name="lonHint">-46.455807</string>
</resources>