<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="255dp"
        android:layout_height="176dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212"
        tools:ignore="ImageContrastCheck" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCadastrarColeta"
        android:layout_width="144dp"
        android:layout_height="124dp"
        android:layout_marginStart="36dp"
        android:drawableTop="@drawable/nova_coleta_vector"
        android:text="@string/cadastrar_coleta_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.254" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditarColeta"
        android:layout_width="144dp"
        android:layout_height="124dp"
        android:layout_marginEnd="36dp"
        android:drawableTop="@drawable/editar_coleta_vector"
        android:text="@string/editar_coleta_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toEndOf="@+id/buttonCadastrarColeta"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.255" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAnalisarColeta"
        android:layout_width="144dp"
        android:layout_height="124dp"
        android:drawableTop="@drawable/analisar_coleta_vector"
        android:text="@string/analisar_coleta_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrarColeta"
        app:layout_constraintVertical_bias="0.254" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGerarRelatorios"
        android:layout_width="144dp"
        android:layout_height="124dp"
        android:drawableTop="@drawable/gerar_relatorio_vector"
        android:text="@string/gerar_relatorios_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toEndOf="@+id/buttonAnalisarColeta"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditarColeta"
        app:layout_constraintVertical_bias="0.247" />


</androidx.constraintlayout.widget.ConstraintLayout>