<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CadastrarColetaSegundaParteFragment">

    <TextView
        android:id="@+id/diametroPeneira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/diametroPeneira"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/diametroPeneiraInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/cinza"
        android:gravity="center"
        android:hint="@string/exemplosMedidasPeneiras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/diametroPeneira"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/areaPeneira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:gravity="top"
        android:text="@string/areaPeneira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diametroPeneira" />

    <EditText
        android:id="@+id/areaPeneiraInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="0.00"
        android:background="@color/cinza"
        android:gravity="center"
        android:hint="@string/exemplosMedidasPeneiras"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/diametroPeneira"
        app:layout_constraintTop_toBottomOf="@id/diametroPeneiraInput"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/areaTodasPeneiras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:gravity="top"
        android:text="@string/areaPeneira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaPeneira" />

    <EditText
        android:id="@+id/areaTodasPeneiraInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="0.00"
        android:background="@color/cinza"
        android:gravity="center"
        android:hint="@string/exemplosMedidasPeneiras"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/diametroPeneira"
        app:layout_constraintTop_toBottomOf="@id/areaPeneiraInput"
        tools:ignore="TextContrastCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/verde"
        app:layout_constraintTop_toBottomOf="@id/areaTodasPeneiraInput"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>